Cleaned some areas that needed polishing such as the mobile and tablet navbar and added links which previously had not been added. Fixed the social list spacing issue in mobile and desktop navbar and removed spring animation on about section

--- a/src/components/About/AboutCards/CardModals/cardModals.css
+++ b/src/components/About/AboutCards/CardModals/cardModals.css
@@ -41,11 +41,11 @@
 .modal-card {
     position: relative;
     width: 80%;
-    height: 190px;
+    height: 11.875rem;
     /* height: 450px; */
     /* background: #fff; */
-    border-radius: 20px;
-    box-shadow: 0 35px 80px rgba(0, 0, 0, 0.15);
+    border-radius: 1.25rem;
+    box-shadow: 0 1.875rem 5rem rgba(0, 0, 0, 0.15);
     display: flex;
     /* justify-content: center;
     align-items: center; */
@@ -54,26 +54,26 @@
 }
 
 .modal-card:hover {
-    height: 450px;
+    height: 28.125rem;
 }
 
 .modal-img-container {
     position: absolute;
     left: 50%;
-    top: -50px;
+    top: -3.125rem;
     transform: translate(-50%);
-    width: 150px;
-    height: 150px;
+    width: 9.375rem;
+    height: 9.375rem;
     background: #fff;
-    border-radius: 20px;
-    box-shadow: 0 15px 50px rgba(0, 0, 0, 0.35);
+    border-radius: 1.25rem;
+    box-shadow: 0 0.938rem 3.125rem rgba(0, 0, 0, 0.35);
     overflow: hidden;
     transition: 0.5s;
 }
 
 .modal-card:hover .modal-img-container {
-    width: 250px;
-    height: 250px;
+    width: 15.625rem;
+    height: 15.625rem;
 }
 
 .modal-img-container img {
@@ -96,15 +96,15 @@
 }
 
 .modal-card .modal-content .modal-details {
-    padding: 40px;
+    padding: 2.5rem;
     text-align: center;
     width: 100%;
     transition: 0.5s;
-    transform: translateY(150px);
+    transform: translateY(9.375rem);
 }
 
 .modal-card:hover .modal-content .modal-details {
-    transform: translateY(0px);
+    transform: translateY(0rem);
 
 }
 
@@ -140,13 +140,13 @@
 .modal-card .modal-content .modal-details .modal-action-btn {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 1.25rem;
 }
 
 .modal-card .modal-content .modal-details .modal-action-btn button {
-    padding: 10px 20px;
+    padding: 0.625rem 1.25rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 0.313rem;
     outline: none;
     font-size: 1rem;
     /* background: var(--blk); */
@@ -156,7 +156,7 @@
 
 @media (min-width: 801px) {
     .modal-img-container {
-        top: -70px;
+        top: -4.375rem;
     }
     .modal-card .modal-content .modal-details h4 {
         font-size: 2rem;
@@ -165,11 +165,11 @@
     .modal-card .modal-content .modal-details span {
         font-size: 1rem;
         position: relative;
-        top: 10px;
+        top: 0.625rem;
     }
 
     .modal-card .modal-content .modal-details {
-        transform: translateY(185px);
+        transform: translateY(11.563rem);
     }
 
     .modal-card .modal-content .modal-details .modal-data h3 {
@@ -191,11 +191,11 @@
     }
 
     .modal-img-container {
-        top: -50px;
+        top: -3.125rem;
     }
     
     .modal-card .modal-content .modal-details {
-        transform: translateY(190px);
+        transform: translateY(11.875rem);
     }
 }
 
