--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -18,7 +18,7 @@
 // AboutLina.js
 #about-lina {
   // height: 500px;
-  margin-bottom: 15rem;
+  margin-bottom: 5rem;
 }
 
 .l-main-about {
@@ -48,10 +48,24 @@
 // --------------------------------------------
 // Tablet
 
+// Width
+@media (max-width: 800px) {
+    .j-main-about {
+        // margin-bottom: 6rem;
+    }
+}
+
 @media (min-width: 601px) {
   .j-main-about {
     // box-shadow: 0px 0px 0px rgb(255, 255, 255), -0px -7px 10px rgb(255, 255, 255);
   }
+}
+
+@media (min-width: 801px) {
+    #about-lina {
+        // height: 500px;
+        margin-bottom: 15rem;
+      }
 }
 
 @media (min-width: 1029px) {
@@ -176,10 +190,8 @@
   }
 }
 
-@media (min-width: 1726px) {
-  // Lina Card
-  .about-us {
-    left: 58rem;
-    top: 6rem;
-  }
+@media (max-height: 800px) {
+    .j-main-about {
+        margin-bottom: 3rem;
+    }
 }
